--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   
 <head>
 <link rel="stylesheet" href="style.css"/>
-<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-  
+
 </head>
   
   
@@ -18,7 +17,7 @@
     </div>
     
     <div class="experience">
-      <h1>Experience</h1>
+      <h1>Experiences!</h1>
       <h4>Padelford Riverboats: May 2019 - November 2023</h4>
     <h5>Assistant Kitchen Manager and Sous Chef</h5>
       <ul>
