--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   
 <head>
 <link rel="stylesheet" href="style.css"/>
+<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 
 </head>
   
