--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     </div>
     
     <div class="experience">
-      <h1>Experiences!</h1>
-      <h4>Padelford Riverboats: May 2019 - November 2023</h4>
-    <h5>Assistant Kitchen Manager and Sous Chef</h5>
+      <h1>Experience</h1>
+      <h4>Padelford Riverboats</h4>
+    <h5>Assistant Kitchen Manager and Sous Chef: May 2019 - November 2023</h5>
       <ul>
         <li>Created and maintained schedule for all Kitchen Staff</li>
         <li>Analyzed the pipeline to properly order and stock kitchen for upcoming events</li>
         <li>Assisted in preparation of events to meet client needs</li>
       </ul>
 
-       <h4>Jobboss: July 2016 - May 2019</h4>
+       <h4>Jobboss</h4>
   
-    <h5>Customer Support Specialist</h5>
+    <h5>Customer Support Specialist: July 2016 - May 2019</h5>
       <ul>
         <li>Responded to calls from customers experiencing issues with the software</li>
         <li>Supported customers with best practice procedures, including escalating issues requiring custom solutions</li>
@@ -37,23 +37,23 @@
         <li>Worked as a team to ensure that all requests are resolved within 72 hours</li>
       </ul>
 
-      <h4>TruScribe: November 2014 - October 2015</h4>
-      <h5>Account Manager</h5>
+      <h4>TruScribe</h4>
+      <h5>Account Manager: November 2014 - October 2015</h5>
       <ul>
         <li>Managed the needs for over 1200 existing clients relationships</li>
         <li>Provided fast and reliable updates to projects, change orders, as requested daily by clients</li>
         <li>Assisted in the set-up of all office tech, including the new phone system installation</li>
       </ul>
       
-      <h4>Patterson Companies: May 2014 - November 2014</h4>
-      <h5>Office365 Exchange Administrator</h5>
+      <h4>Patterson Companies</h4>
+      <h5>Office365 Exchange Administrator: May 2014 - November 2014</h5>
       <ul>
         <li>Provided direct online/phone support for 7000+ users in Patterson Office 365 Exchange online environment</li>
         <li>Implemented Exchange Online Protection for spam detection and blocking</li>
         <li>Assisted in the transition from the legacy Lotus Notes email system to Office 365 Exchange Online</li>
       </ul>
-      <h4>PowerObjects: August 2011 - March 2014</h4>
-      <h5>IT Support Spectialist</h5>
+      <h4>PowerObjects</h4>
+      <h5>IT Support Spectialist: August 2011 - March 2014</h5>
       <ul>
         <li>Provided direct online/phone/onsite support to internal/external clients on all software/hardware/security issues</li>
         <li>Triaged incoming support requests including prioritizing and documenting issues</li>
