--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <body>
     <div class="header">
       <h2>Sam Shacter</h2>
+      <h6>
+      <a href = "mailto:sshacter@gmail.com"> sshacter@gmail.com </a>
+      </h6>
+      <h3>612.804.5010</h3>
     </div>
     
     <table>
@@ -88,7 +92,7 @@ SharePoint Server 2010 & 2013<br>
 Microsoft SQL Server 2008, 2008 R2, 2012<br>
 Active Directory<br>
 PowerShell scripting<br>
-VMWare and HyperV virtual systems.>br?
+VMWare and HyperV virtual systems.<br>
 Networking systems and devices.<br>
 Experience using MS Office Suite (Word, Excel, PowerPoint, Outlook)<br>
        Building computer hardware systems and functionality
