--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
       <h2>Sam Shacter</h2>
       <h3>612.804.5010</h3>
-      <h6><a href="mailto:sshacter@gmail.com>sshacter@gmail.com</a></h6>
+      <h6><a href="mailto:sshacter@gmail.com">sshacter@gmail.com</a></h6>
     </div>
     
     <table>
