--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ PowerShell scripting<br>
 VMWare and HyperV virtual systems.<br>
 Networking systems and devices.<br>
 Experience using MS Office Suite (Word, Excel, PowerPoint, Outlook)<br>
-Building computer hardware systems and functionality<br>
+Building computers<br>
 CompTIA A+ Certified
       </h6>
       
